force-app/main/default/objects/SLA_Escalation_Record__c/SLA_Escalation_Record__c.object-meta.xml
<CustomObject>
    <description>Tracks SLA escalations and breach thresholds.</description>
    <label>SLA Escalation Record</label>
    <nameField>
        <label>SLA Escalation Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA Escalation Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>