force-app/main/default/objects/SLA_Escalation_Record__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <externalId>true</externalId>
    <label>Key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>