force-app/main/default/objects/SLA_Escalation_Record__c/fields/Threshold_Hours__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Hours__c</fullName>
    <label>Threshold Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>