force-app/main/default/objects/SLA_Escalation_Record__c/fields/Threshold_Type__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Type__c</fullName>
    <label>Threshold Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>