force-app/main/default/objects/SLA_Escalation_Record__c/fields/Tier_Name__c.field-meta.xml
<CustomField>
    <fullName>Tier_Name__c</fullName>
    <label>Tier Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>